# django-custom-user

./: README.md
django_custom_user/: db.sqlite3  pyproject.toml
django_custom_user/custom_user_project/: settings.py  urls.py
django_custom_user/users/: admin.py  forms.py  models.py  tests.py
django_custom_user/users/migrations/: 0001_initial.py
