[tool.poetry]
name = "django_custom_user"
version = "0.1.0"
description = ""
authors = ["sondos-braim <sondos9811@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
